--- a/10-IV.Rmd
+++ b/10-IV.Rmd
@@ -6,15 +6,15 @@ So, that's it, no RCT, no causal estimates?
 
 No! Methods like instrumental variables can help us to establish causality if we only have *observational data* (i.e. data generated not via experiment). That's reassuring, because in many settings this kind of data is the only thing we have.
 
-(some examples of datasets)
-
 
 ## John Snow and the London Cholera Epidemic
 
-(an old placard from the time)
-The 1853-1854 Cholera outbreak in London killed 616 people. Physician [John Snow](https://en.wikipedia.org/wiki/John_Snow) was able to use data collected during this period to demonstrate that the illness was water-borne, and not transmitted via air, as was widely believed at the time. In order to better appreciate this section, let's imagine the world of John Snow in 1853:
 
-(section based on freedman 1991)
+```{r father-thames, fig.cap="Father Thames Introducing his Offspring to the Fair City of London, [Punch (1858)](https://www.bl.uk/collection-items/father-thames-introducing-his-offspring-to-the-fair-city-of-london-from-punch)",echo = FALSE}
+knitr::include_graphics("images/father-thames.jpg")
+```
+
+The 1853-1854 Cholera outbreak in London killed 616 people. Physician [John Snow](https://en.wikipedia.org/wiki/John_Snow) was able to use data collected during this period to demonstrate that the illness was water-borne, and not transmitted via air, as was widely believed at the time. In order to better appreciate this section, let's imagine the world of John Snow in 1853 (The following section draws heavily on @freedman1991):
 
 ```{block, type='notel'}
 * It is not yet known that germs can cause disease (or indeed, that they exist).
@@ -23,7 +23,7 @@ The 1853-1854 Cholera outbreak in London killed 616 people. Physician [John Snow
 * The so-called *infection theory* (i.e. infection via *germs*) has some supporters, but the dominant idea is that disease, in general, results from [*miasmas*](https://en.wikipedia.org/wiki/Miasma_theory): very small, non-living poisonous particles that float in the air - basically rotting organic matter would emanate foul air, that caused disease. Figure \@ref(fig:miasma) shows an illustration.
 ```
 <br>
-```{r miasma, fig.cap='Robert Seymour - A Short History of the National Institutes of Health National Library of Medicine photographic archive.'}
+```{r miasma, fig.cap="Robert Seymour - A Short History of the National Institutes of Health National Library of Medicine photographic archive.",echo = FALSE}
 knitr::include_graphics("images/Cholera_art.jpg")
 ```
 
@@ -34,7 +34,7 @@ Snow conducted some impressive detective work tracking down exceptional cases th
 
 During 1853-1854, John Snow drew a map (see figure \@ref(fig:snow-map)) that showed where the fatalities had occured. It became obvious that the cases clustered around the Broad Street pump. 
 
-```{r snow-map, fig.cap="John Snow's original map of the Broad Street pump. https://commons.wikimedia.org/wiki/File:Snow-cholera-map-1.jpg"}
+```{r snow-map, fig.cap="John Snow's original map of the Broad Street pump. https://commons.wikimedia.org/wiki/File:Snow-cholera-map-1.jpg",echo = FALSE}
 knitr::include_graphics("images/snow-map.jpg")
 ```
 
@@ -49,9 +49,15 @@ What seemed much more interesting to him were other observations, like for examp
 1. He found that a large poorhouse in the Broad Street area had very few cholera cases. He observed that the poorhouse had its own well (no need for the inmates to go the public Broad Street pump).
 1. There was a large brewery in the vicinity of the pump, whose workers did not die of cholera. The workers drank beer, and there was a private well on the premises.
 
-## Mapping London's Water Supply
+### Mapping London's Water Supply
 
 A few years before the outbreak, Lambeth water company had decided to move its water intake point upstream along the Thames, beyond the main sewage discharge points. Two other companies, the Southwark and Vauxhall water companies, however, left their intake points where they were, i.e. downstream from the sewage discharges. Snows analysis of the data showed that cholera was more prevalent in the Southwark and Vauxhall serviced areas and largely had spared Lambeth. He was able to compile the data in table \@ref(tab:snow-tab9):
+
+```{r snow-tab9,echo = FALSE}
+st9 <- data.frame(numhouses = c(40046,26107,256423), 
+                  deaths = c(1263,98,1422),
+                  death1000 = c(315,37,59))
+```
 
 Table: (\#tab:snow-tab9) John Snow's table IX
 
@@ -65,12 +71,12 @@ With table \@ref(tab:snow-tab9) in hand, Snow concluded that *if* Southwark and 
 
 Of course he was proven right later on, when in 1884 Koch first isolated the cholera *vibrio*, basically confirming Snow's version of the story. But what is really interesting for us is how he was able to us his **non-experimental** data set to make his point.
 
-## Snow's Model of Cholera Transmission
+### Snow's Model of Cholera Transmission
 
 Even though he never formally wrote it down in this way, we can formulate Snow's way of thinking about the issue in the following terms:
 
 * Suppose that $c_i$ takes the value 1 if individiual $i$ dies of cholera, 0 else.
-* Let $w_i = 1$ mean that $i$'s water supply is pure and $w_i = 0$ vice versa. Water purity is assessed with a technology that cannot detect small microbes.
+* Let $w_i = 1$ mean that $i$'s water supply is impure and $w_i = 0$ vice versa. Water purity is assessed with a technology that cannot detect small microbes.
 * Collect in $u_i$ all unobservable factors that impact $i$'s likelihood of dying from the disease: whether $i$ is poor, where exactly they reside, whether there is bad air quality in $i$'s surrounding, and other invidivual characteristics which impact the outcome (like genetic setup of $i$).
 
 With this, can write model \@ref(eq:snow-mod1):
@@ -79,24 +85,110 @@ With this, can write model \@ref(eq:snow-mod1):
 c_i = \alpha + \delta w_i + u_i (\#eq:snow-mod1)
 \end{equation}
 
-John Snow could have used his data and assess the correlation between drinking pure water and cholera incidence, i.e. try to measure $Cov(c_i,w_i)$, or, which is the same, just run model \@ref(eq:snow-mod1) as a linear regression. There is a problem with this, however. As Deaton (1997) says, 
+John Snow could have used his data and assess the correlation between drinking pure water and cholera incidence, i.e. try to measure $Cov(c_i,w_i)$, or, which is the same, just run model \@ref(eq:snow-mod1) as a linear regression. There is a problem with this, however. As @deaton1997 says, 
 
 > The people who drank impure water were also more likely to be poor, and to live in an environment contaminated in many ways, not least by the ‘poison miasmas’ that were then thought to be the cause of cholera.
 
 In other words, it does not make sense to compare someone who drinks pure water with someone with impure water, as model \@ref(eq:snow-mod1) proposes to do, because *all else is not equal*: pure water is correlated with being poor, living in bad area, bad air quality and so on - all factors that we encounter in $u_i$. This violates the crucial assumption for valid OLS estimates, $E[u_i | w_i]=0$ in this context. Another way to say this, is that $Cov(w_i, u_i) \neq 0$, implying that $w_i$ is *endogenous* in equation \@ref(eq:snow-mod1): There are factors in $u_i$ that affect both $w_i$ and $c_i$, so we cannot reasonably say that *the effect of $w$ is that...*, because things in $u_i$ move at the same time as $w_i$ moves (and we can't see those things).
 
-Conditioning on the values of $w$, we can write
+Let us conditioning equation \@ref(eq:snow-mod1) on either value $w$ might take:
 
+\begin{aligned}
+E[c_i | w_i = 1] &= \alpha + \delta + E[u_i | w_i = 1] \\
+E[c_i | w_i = 0] &= \alpha + \phantom{\delta} + E[u_i | w_i = 0]
+\end{aligned}
 
-
-This means that if we want to have a causal estimate of the impact of pure water on cholera, $\delta$, we cannot simply do 
+Simply differencing those two lines thus yields
 
 \begin{equation}
-E[c_i | w_i = 1] - E[c_i | w_i = 0] = \gamma \neq \delta (\#eq:snow-mod2)
+E[c_i | w_i = 1] - E[c_i | w_i = 0] = \delta + \left\{ E[u_i | w_i = 1] - E[u_i | w_i = 0]\right\}
 \end{equation}
 
-where I've written $\gamma$ to mean that we *will* obtain some result from this calculation, but it is **not** what we were looking for.
-
-## The IV Estimator
+and we said hat it stands to reason that this last term $\left\{ E[u_i | w_i = 1] - E[u_i | w_i = 0]\right\}$ is not equal to zero.
 
 
+
+## Defining the IV Estimator
+
+John Snow did not know what an IV estimator was because it had not yet been described yet. However, we can use the above setup to develop the idea. To get at this, it is useful to hear what John Snow has to say after he shows us his table IX, displayed in table \@ref(tab:snow-tab9) above:
+
+> [...] the mixing of the supply is of the most intimate kind. The pipes of each Company go down all the streets, and into nearly all the courts and alleys. [...] The experiment, too, is on the grandest scale. No fewer than three hundred thousand people of both sexes, of every age and occupation, and of every rank and station, from gentlefolks down to the very poor, were divided into two groups without their choice, and in most cases, without their knowledge; one group supplied with water containing the sewage of London, and amongst it, whatever might have come from the cholera patients, the other group having water quite free from such impurity.
+
+So, Snow is proposing an **instrumental variable** $z_i$, the identity of the water supplying company to household $i$, which is highly correlated with the water purity $w_i$. However, following his remarks above, it seems to be uncorrelated with all the other factors in $u_i$ which we worried about above: people in most cases didn't even know who supplied their water, as those decisions were taken years before. Very similar households, on either side of a street, may have had different water purity in their homes as a result of a different supplier.^[The formulation as an IV has been taken from [W. Greene's website](http://people.stern.nyu.edu/wgreene/Econometrics/Cholera-IV-Study.pdf)]
+
+More formally, let's define the instrument as follows:
+
+\begin{align*}
+z_i &=  \begin{cases}
+                    1 & \text{if water supplied by Lambeth} \\
+                    0 & \text{if water supplied by Southwark or Vauxhall.} \\
+                 \end{cases} \\
+\end{align*}
+
+We require two things from an instrument:
+
+```{block, type="notel"}
+1. **Relevance**: Water purity is indeed a function of supplier identity. We want that $$E[w_i | z_i = 1] \neq E[w_i | z_i = 0]$$ i.e. the average water purity differs across suppliers. We can *verify* this condition with observational data.
+2. **Exogeneity** or **Excludability** of $z$: We want that water supplier identity $z$ be *exogenous* to all other unobservables $u$ in the model, such that whether we condition $u$ on certain values of $z$ does not change the result - we want $$E[u_i | z_i = 1] = E[u_i | z_i = 0].$$ $z$ is said to be *excludable* from the outcome equation because it would not add any information, after we observed $w$.
+```
+<br>
+
+Point 2. is the difficult part, because there is no real test for it: we have to reason and argue to make the case that is a reasonable assumption. This is where Snow's citation from above comes into play: He reasons that water supply varies **randomly** over households, irrespective their unobservables $u$. The statement is that whatever factors are present in $u$, they are present in equal proportion in households with different $z$, because assignment of $z$ was random.
+
+We are now ready to define a simple IV estimator. Notice that conditioning \@ref(eq:snow-mod1) on values of $z$ yields 
+
+\begin{aligned}
+E[c_i | z_i = 1] &= \alpha + \delta E[w_i | z_i = 1] + E[u_i | z_i = 1] \\
+E[c_i | z_i = 0] &= \alpha + \delta E[w_i | z_i = 0] + E[u_i | z_i = 0]
+\end{aligned}
+
+which upon differencing both lines gives 
+
+\begin{aligned}
+E[c_i | z_i = 1] - E[c_i | z_i = 0] &= \delta  \left\{ E[w_i | z_i = 1] - E[w_i | z_i = 0]\right\} \\
+&+ \underbrace{\left\{ E[u_i | z_i = 1] - E[u_i | z_i = 0] \right\}}_{=0 \text{ by Exogeneity Assumption}}
+\end{aligned}
+
+The IV estimator is then obtained by isolating $\delta$ and writing
+
+\begin{equation}
+\delta = \frac{E[c_i | z_i = 1] - E[c_i | z_i = 0]}{E[w_i | z_i = 1] - E[w_i | z_i = 0]} (\#eq:IV)
+\end{equation}
+
+Notice that this is only defined if the denominator is nonzero, i.e. the Relevance condition (point 1. above) holds.
+
+
+### Computing the IV Estimate
+
+You remember from earlier chapters that equation \@ref(eq:IV) refers to a *population* parameter, i.e. *the true* value in an infinite population. To learn about it's value, we need to *estimate* it from data. We can use a simple sample analog of the population expectations, i.e. sample means. With some abuse of notation let's say that $x \mapsto y$ means that $x$ is an estimate for $y$:
+
+1. $\overline{c}_1 \mapsto E[c_i | z_i = 1]$: the proportion of households supplied by Lambeth with cholera.
+1. $\overline{w}_1 \mapsto E[w_i | z_i = 1]$: the proportion of households supplied by Lambeth with bad water.
+1. $\overline{c}_0 \mapsto E[c_i | z_i = 0]$: the proportion of households not supplied by Lambeth with cholera.
+1. $\overline{w}_0 \mapsto E[w_i | z_i = 0]$: the proportion of households not supplied by Lambeth with bad water.
+
+The estimator would then be
+
+\begin{equation}
+\hat{\delta} = \frac{\overline{c}_1 - \overline{c}_0}{\overline{w}_1 - \overline{w}_0} (\#eq:IVhat)
+\end{equation}
+
+and it is caused the *Wald estimator*.
+
+Unfortunately we do not know the values of the above numbers. With some effort, however, Snow could have canvassed all houses in the concerned areas, record their water supplying company, their water purity indicator, and whether or not they had a cholera death. So let's make some numbers up just for the sake of it.
+
+1. $\overline{c}_1 = 0.002$: the proportion of households supplied by Lambeth with cholera.
+1. $\overline{w}_1 = 0.1$: the proportion of households supplied by Lambeth with bad water.
+1. $\overline{c}_0 = 0.315$: the proportion of households not supplied by Lambeth with cholera.
+1. $\overline{w}_0 = 0.5$: the proportion of households not supplied by Lambeth with bad water.
+
+```{r}
+delta = (0.002 - 0.315) / (0.1 - 0.5)
+```
+So, in this artificial dataset, we would have found an estimated **causal** effect of `r delta` of impure water on the likelihood of contracting cholera. We would write
+
+\begin{equation}
+\Delta \Pr(c = 1 | w ) = \alpha + \delta \times 1 - \alpha - \delta \times 0 = `r delta`
+\end{equation}
+
+so the probability of getting cholera is `r round(delta,2)` higher, if you have impure water (i.e. if $w$ goes from 0 to 1).
