--- a/book.bib
+++ b/book.bib
@@ -29,4 +29,17 @@ Month = {January},
 Pages = {138-68},
 DOI = {10.1257/aer.20150355},
 URL = {http://www.aeaweb.org/articles?id=10.1257/aer.20150355}}
-
+@article{freedman1991,
+  title={Statistical models and shoe leather},
+  author={Freedman, David A},
+  journal={Sociological methodology},
+  pages={291--313},
+  year={1991},
+  publisher={JSTOR}
+}
+@book{deaton1997,
+  title={The analysis of household surveys: a microeconometric approach to development policy},
+  author={Deaton, Angus},
+  year={1997},
+  publisher={The World Bank}
+}
