--- a/book.bib
+++ b/book.bib
@@ -43,3 +43,31 @@ URL = {http://www.aeaweb.org/articles?id=10.1257/aer.20150355}}
   year={1997},
   publisher={The World Bank}
 }
+@article{angristlavy,
+  title={Using Maimonides' rule to estimate the effect of class size on scholastic achievement},
+  author={Angrist, Joshua D and Lavy, Victor},
+  journal={The Quarterly journal of economics},
+  volume={114},
+  number={2},
+  pages={533--575},
+  year={1999},
+  publisher={MIT Press}
+}
+@article{angristkrueger,
+    author = {Angrist, Joshua D. and Keueger, Alan B.},
+    title = "{Does Compulsory School Attendance Affect Schooling and Earnings?*}",
+    journal = {The Quarterly Journal of Economics},
+    volume = {106},
+    number = {4},
+    pages = {979-1014},
+    year = {1991},
+    month = {11},
+    abstract = "{We establish that season of birth is related to educational attainment because of school start age policy and compulsory school attendance laws. Individuals born in the beginning of the year start school at an older age, and can therefore drop out after completing less schooling than individuals born near the end of the year. Roughly 25 percent of potential dropouts remain in school because of compulsory schooling laws. We estimate the impact of compulsory schooling on earnings by using quarter of birth as an instrument for education. The instrumental variables estimate of the return to education is close to the ordinary least squares estimate, suggesting that there is little bias in conventional estimates.}",
+    issn = {0033-5533},
+    doi = {10.2307/2937954},
+    url = {https://doi.org/10.2307/2937954},
+    eprint = {https://academic.oup.com/qje/article-pdf/106/4/979/5298446/106-4-979.pdf},
+}
+
+
+
